--- a/src/main/resources/static/CSS/menu.css
+++ b/src/main/resources/static/CSS/menu.css
@@ -66,12 +66,31 @@ body{
 }
 
 .nav-menu-link:hover{
-    background-color: skyblue;
-    transition: 0.75s;
+    font-size: 22px;
+    background-color: #024070;
+    transition: 1s;
 }
 
+.footer{
+    background-color: black;
+    text-align: center;
+    color: white;
+    height: 20px;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+}
 
-
+.contenido{
+    background-color: wheat;
+    position: fixed;
+    top:80px;
+    bottom: 20px;
+    left: 0;
+    width: 100%;
+    overflow: auto;
+}
 
 
 
