--- a/src/main/resources/templates/Index.html
+++ b/src/main/resources/templates/Index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <title>TechShop</title>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <div>Saludos</div>
-        <!--        <p th:text="${MensajeSaludo}"></p> Esto renderiza el html -->
+<html xmlns: th="http://www.thymeleaf.org"
+   xmlns="http://www.w3.org/1999/xhtml">
+   <head>
+      <title>TechShop</title>
+      <meta charset="UTF-8"/>
+      <link href="/CSS/menu.css" rel="stylesheet" type="text/css"/>
+   </head>
+   <body>
+      <header th:replace="layout/plantilla :: header"/>
+      <div class="contenido">
+         <h2>Nuestros Articulos</h2>
+         <div th:if="${articulos != null and !articulos.empty}">
+            <table border="1">
+               <thead>
+                  <tr>
+                     <th>Descripcion</th>
+                     <th>Precio</th>
+                  </tr>
+               </thead>
+               <tbody>
+                  Index actualizado
+                  <tr th:each="articulo: $(articulos}">
+                     <td th:text="${articulo.descripcion}"></td>
+                     <td th:text="${#numbers.formatDecimal (articulo.precio,3,2)}" style="text-align: right"></td>
+                     <td><a th:href="@{/carrito/agregar/} + ${articulo.idArticulo}">Agregar</a></td>
+                  </tr>
+               </tbody>
+            </table>
+         </div>
+         <div th:if="${articulos == null or articulos.empty}">
+            No tenemos articulos que mostrar...
+         </div>
+      </div>
+      <footer th:replace="layout/plantilla :: footer"/>
+   </body>
+</html>
+
+<!--<p th:text="${MensajeSaludo}"></p> Esto renderiza el html -->
         <!--        <h1>Un cliente</h1>
                 <p>Nombre: <span th:text="${cliente.nombre}"></span></p>
                 <p>Apellidos: <span th:text="${cliente.apellidos}"></span></p>
@@ -15,35 +45,3 @@
         -->
         <!--La arroba es para rutas y el signo de dolar para modelo de datos-->
         
-        <header th:replace="layout/plantilla :: header"/>
-        <h1>Clientes</h1>
-        <a th:href="@{/nuevoCliente}">Nuevo Cliente</a>
-        <div th:if="${clientes != null  and !clientes.empty}">
-            <table border="1">
-            <thead>
-            <th>Nombre</th>
-            <th>Apellidos</th>
-            <th>Correo</th>
-            <th>Telefono</th>
-            <th colspan="2">Acciones</th>
-            </thead>
-            <tbody>
-                <tr th:each="cliente : ${clientes}">
-                    <td th:text="${cliente.nombre}"></td>
-                    <td th:text="${cliente.apellidos}"></td>
-                    <td th:text="${cliente.correo}"></td>
-                    <td th:text="${cliente.telefono}"></td>
-                    <td><a th:href="@{/modificarCliente/} + ${cliente.idCliente}">Modificar</a></td>
-                    <td><a th:href="@{/eliminarCliente/} + ${cliente.idCliente}">Eliminar</a></td>
-                </tr>
-            </tbody>
-        </table>
-        </div>
-        <div th:if="${clientes == null  or clientes.empty}">
-            La lista no contiene datos...
-        </div>
-        <footer th:replace="layout/plantilla :: footer"/>
-        
-        
-    </body>
-</html>
