--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml"
+<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
 <head>
    <title>TechShop</title>
    <meta charset="UTF-8"/>
@@ -25,12 +25,11 @@
                   <th>Modificar</th>
                </tr>
                </thead>
-               <tr th:each="cliente : $(clientes}">
+               <tr th:each="cliente : ${clientes}">
                   <td th:text="${cliente.nombre}"></td>
                   <td th:text="${cliente.apellidos}"></td>
                   <td th:text="${cliente.correo}"></td>
                   <td th:text="${cliente.telefono}"></td>
-                  listado - cliente -
                   <td th:text="${#numbers.formatDecimal(cliente.limite, 3,2)}" style="text-align: right"></td>
                   <td><a th:href="@{/cliente/eliminar/} + ${cliente.idCliente}">Eliminar</a></td>
                   <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}">Modificar</a></td>
