--- a/src/main/resources/templates/articulo/listado.html
+++ b/src/main/resources/templates/articulo/listado.html
@@ -1,41 +1,43 @@
 ﻿
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org xmlns="http://www.w3.org/1999/xhtml>
-<head>
-   <title>TechShop</title>
-   <meta charset="UTF-8"/>
-   <link href="/CSS/menu.css" rel="stylesheet" type="text/css"/>
-</head>
+<html xmlns:sec="http://thymeleaf.org/extras/spring-security" 
+      xmlns: th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
+   <head th:replace="layout/plantilla :: head">
+     <title>Techshop</title>
+   </head>
 <body>
    <header th:replace="layout/plantilla :: header"/>
    <div class="contenido">
-      <h2>Listado de Clientes</h2>
-      <a th:href="@{/articulo/nuevo}">Nueva Articulo</a>
+      <h2 th:text="#{articulo.titulo}" >Listado de Clientes</h2>
+      <a th:href="@{/articulo/nuevo}" th:text="#{articulo.nuevo}" >Nueva Articulo</a>
       <div th:if="${articulos != null and articulos.empty}">
          <table border="1">
             <thead>
                <tr>
-                  <th>Descripcion</th>
-                  <th>Precio</th>
-                  <th>Existencias</th>
-                  <th>Activa</th>
+                  <th th:text="#{articulo.descripcion}">Descripcion</th>
+                  <th th:text="#{articulo.precio}" >Precio</th>
+                  <th th:text="#{articulo.existencias}" >Existencias</th>
+                  <th th:text="#{articulo.activo}">Activo</th>
+                  <th th:text="#{articulo.eliminar}" >Eliminar</th>
+                  <th th:text="#{articulo.actualizar}" >Actulizar</th>
                </tr>
             </thead>
             <tbody>
-               listado -articulo-
+               
                <tr th:each="articulo: ${articulos}">
                   <td th:text="${articulo.descripcion}"></td>
                   <td th:text="${#numbers.formatDecimal (articulo.precio,3,2)}" style="text-align: right"></td>
                   <td th:text="${articulo.existencias}" style="text-align: center"></td>
                   <td><input type="checkbox" name="activa" th: checked="${articulo.activo}" disabled="true"></td>
-                  <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}">Eliminar</a></td>
-                  <td><a th:href="@{/articulo/modificar/} + ${articulo.idArticulo}">Modificar</a></td>
+                  <td><a th:href="@{/articulo/eliminar/} + ${articulo.idArticulo}" th:text="#{accion.eliminar}" >Eliminar</a></td>
+                  <td><a th:href="@{/articulo/modificar/} + ${articulo.idArticulo}" th:text="#{accion.eliminar}">Modificar</a></td>
                </tr>
             </tbody>
          </table>
       </div>
-      <div th:if="$(articulos == null or articulos.empty)">
-         No tenemos articulos que mostrar...
+      <div th:if="${articulos == null or articulos.empty}">
+          <p th:text="#{articulo.no_mostrar}">No tenemos articulos que mostrar...</p>
       </div>
    </div>
    <footer th:replace="layout/plantilla :: footer"/>
