--- a/src/main/resources/templates/articulo/modificar.html
+++ b/src/main/resources/templates/articulo/modificar.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-   <head>
-      <title>TechShop</title>
-      <meta charset="UTF-8"/>
-      <link href="/CSS/menu.css" rel="stylesheet" type="text/css"/>
+<html xmlns:sec="http://thymeleaf.org/extras/spring-security" 
+      xmlns: th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
+   <head th:replace="layout/plantilla :: head">
+     <title>Techshop</title>
    </head>
    <body>
       <header th:replace="layout/plantilla :: header"/>
       <div class="contenido">
-         <h2>Datos de Cliente</h2>
-         <a th:href="@{/articulo/listado}">Regresar</a>
+         <h2 th:text="#{articulo.datos}" >Datos de Cliente</h2>
+         <a th:href="@{/articulo/listado}" th:text="#{accion.regresar}" >Regresar</a>
          <br/><br/>
          <form th:action="@{/articulo/guardar}" method="post" th:object="${articulo}">
-            <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/><br/> <label for="categoria">Categoria:</label>
+            <input type="hidden" name="idArticulo" th:field="*{idArticulo}"/><br/> <label for="categoria" th:text="#{articulo.categoria}" >Categoria:</label>
             <select th:field="*{idCategoria}">
                <option th:each="categoria: ${categorias}"
                   th: value="${categoria.idCategoria}" th:text="${categoria.descripcion}"/>
             </select>
             <br/>
-            <label for="descripcion">Descripcion:</label>
-            <input type="text" name="descripcion" th:field="*{descripcion}"/><br/> <label for="detalle">Detalle:</label>
+            <label for="descripcion" th:text="#{articulo.descripcion}" >Descripcion:</label>
+            <input type="text" name="descripcion" th:field="*{descripcion}"/><br/>
+            
+            <label for="detalle" th:text="#{articulo.detalle}" >Detalle:</label>
             <textarea name="detalle" th:field="*{detalle}" rows="6" cols="50"/>
             <br/> 
-            <label for="precio">Precio: </label>
+            
+            <label for="precio" th:text="#{articulo.precio}" >Precio: </label>
             <input type="number" name="precio" th:field="*{precio}"/><br/>
-            <label for="existencias">Existencias: </label>
+            
+            <label for="existencias" th:text="#{articulo.existencias}" >Existencias: </label>
             <input type="number" name="existencias" th:field="* {existencias}"/><br/> 
-            <label for="activo">Activo:</label>
+            
+            <label for="activo" th:text="#{articulo.activo}" >Activo:</label>
             <input type="checkbox" name="activo" th: field="*{activo}"/><br/>
-            <input type="submit" name="guadar" value="Guardar"/>
+           
+            <input type="submit" th:text="#{accion.guardar}"/>
          </form>
       </div>
       <footer th:replace="layout/plantilla :: footer"/>
