--- a/src/main/resources/templates/cliente/listado.html
+++ b/src/main/resources/templates/cliente/listado.html
@@ -1,28 +1,28 @@
 
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
-<head>
-   <title>TechShop</title>
-   <meta charset="UTF-8"/>
-   <link href="/CSS/menu.css" rel="stylesheet" type="text/css"/>
-</head>
+<html xmlns:sec="http://thymeleaf.org/extras/spring-security" 
+      xmlns: th="http://www.thymeleaf.org"
+      xmlns="http://www.w3.org/1999/xhtml">
+    <head th:replace="layout/plantilla :: head">
+        <title>Techshop</title>
+    </head>
 <body>
    <header th:replace="layout/plantilla :: header"/>
    <div class="contenido">
-      <h2>Listado de Clientes</h2>
-      <a th:href="@{/cliente/nuevo}">Nuevo Cliente</a> 
+      <h2 th:text="#{cliente.titulo}" >Listado de Clientes</h2>
+      <a th:href="@{/cliente/nuevo}" th:text="#{cliente.nuevo}">Nuevo Cliente</a> 
       <div th:if="${clientes != null and !clientes.empty}">
          <table border="1">
             <thead>
             <tbody>
                <tr>
-                  <th>Nombre</th>
-                  <th>Apellidos</th>
-                  <th>Correo</th>
-                  <th>Teléfono</th>
-                  <th>Limite</th>
-                  <th>Eliminar</th>
-                  <th>Modificar</th>
+                  <th th:text="#{cliente.nombre}" >Nombre</th>
+                  <th th:text="#{cliente.apellidos}" >Apellidos</th>
+                  <th th:text="#{cliente.correo}" >Correo</th>
+                  <th th:text="#{cliente.telefono}" >Teléfono</th>
+                  <th th:text="#{cliente.limite}" >Limite</th>
+                  <th th:text="#{cliente.eliminar}" >Eliminar</th>
+                  <th th:text="#{cliente.actualizar}" >Modificar</th>
                </tr>
                </thead>
                <tr th:each="cliente : ${clientes}">
@@ -31,14 +31,14 @@
                   <td th:text="${cliente.correo}"></td>
                   <td th:text="${cliente.telefono}"></td>
                   <td th:text="${#numbers.formatDecimal(cliente.limite, 3,2)}" style="text-align: right"></td>
-                  <td><a th:href="@{/cliente/eliminar/} + ${cliente.idCliente}">Eliminar</a></td>
-                  <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}">Modificar</a></td>
+                  <td><a th:href="@{/cliente/eliminar/} + ${cliente.idCliente}" th:text="#{accion.eliminar}">Eliminar</a></td>
+                  <td><a th:href="@{/cliente/modificar/} + ${cliente.idCliente}" th:text="#{accion.actualizar}">Modificar</a></td>
                </tr>
             </tbody>
          </table>
       </div>
       <div th:if="${clientes == null or clientes.empty}">
-         No tenemos clientes que mostrar...
+          <p th:text="#{cliente.no_mostrar}">No tenemos clientes que mostrar...</p>
       </div>
    </div>
    <footer th:replace="layout/plantilla :: footer"/>
