--- a/src/main/resources/templates/cliente/modificar.html
+++ b/src/main/resources/templates/cliente/modificar.html
@@ -30,7 +30,7 @@
             <label for="limite"  th:text="#{cliente.limite}" >Límite de crédito:</label>
             <input type="number" name="limite" th:field="*{credito.limite}"/> <br/> <br/>
             
-            <input type="submit"  th:text="#{cliente.guardar}"/> 
+            <input type="submit"  th:text="#{accion.guardar}"/> 
          </form>
       </div>
       <footer th:replace="layout/plantilla :: footer"/>
